--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
-    margin: 50px;
+    margin: 60px;
     background-color: #76a3e3;
     font-family: "public sans", Helvetica, sans-serif;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 section {
@@ -29,6 +28,10 @@ h2 {
 
 h3 {
     font-family: "Oswald", arial, sans-serif;
+}
+
+p {
+    line-height: 1.3em;
 }
 
 iframe {
